--- a/app/src/main/res/layout/item_on_boarding.xml
+++ b/app/src/main/res/layout/item_on_boarding.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/skip"
@@ -49,7 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Get started"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
