1. added new fragment AuthFragment 2.realized signInWithGmail button,
3.Added an exit from account button on Profile fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,19 +22,35 @@
         android:name="com.example.taskmanager.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
-    <fragment
-        android:id="@+id/taskFragment"
-        android:name="com.example.taskmanager.ui.task.TaskFragment"
-        android:label="Task"
-        tools:layout="@layout/fragment_task" />
+
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.taskmanager.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
+        android:id="@+id/taskFragment"
+        android:name="com.example.taskmanager.ui.task.TaskFragment"
+        android:label="Task"
+        tools:layout="@layout/fragment_task" />
+    <fragment
         android:id="@+id/onBoardingFragment"
         android:name="com.example.taskmanager.ui.onBoarding.OnBoardingFragment"
         android:label="fragment_on_boarding"
         tools:layout="@layout/fragment_on_boarding" />
+    <fragment
+        android:id="@+id/phoneFragment"
+        android:name="com.example.taskmanager.ui.auth.phone.PhoneFragment"
+        android:label="fragment_phone"
+        tools:layout="@layout/fragment_phone" />
+    <fragment
+        android:id="@+id/verifyFragment"
+        android:name="com.example.taskmanager.ui.auth.verify.VerifyFragment"
+        android:label="fragment_verify"
+        tools:layout="@layout/fragment_verify" />
+    <fragment
+        android:id="@+id/authFragment"
+        android:name="com.example.taskmanager.ui.auth.auth.AuthFragment"
+        android:label="fragment_auth"
+        tools:layout="@layout/fragment_auth" />
 </navigation>
